pow/virtual threads experiments